--- a/app/src/main/res/drawable/toolbar_background.xml
+++ b/app/src/main/res/drawable/toolbar_background.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp"/>
-    <solid android:color="@color/purple_200"/>
+    <solid android:color="#E4E4B1"/>
 </shape>
