--- a/app/src/main/res/layout/draw_canvas.xml
+++ b/app/src/main/res/layout/draw_canvas.xml
@@ -28,51 +28,25 @@
 
         <ImageButton
             android:id="@+id/Color"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/black_background"
             android:onClick="btn"
             tools:ignore="SpeakableTextPresentCheck" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/blueColor"-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_margin="5dp"-->
-<!--            android:background="@drawable/blue_background"-->
-<!--            android:onClick="btn"-->
-<!--            tools:ignore="TouchTargetSizeCheck" />-->
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/greenColor"-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_margin="5dp"-->
-<!--            android:background="@drawable/green_background"-->
-<!--            android:onClick="btn" />-->
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/blackColor"-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:layout_margin="5dp"-->
-<!--            android:background="@drawable/black_background"-->
-
-<!--            android:onClick="btn"-->
-<!--            tools:ignore="TouchTargetSizeCheck" />-->
         <ImageButton
             android:id="@+id/shape"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/minus_thick"
             android:onClick="btn"
             tools:ignore="SpeakableTextPresentCheck" />
         <ImageButton
             android:id="@+id/background"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/checkbox_blank_outline"
             android:onClick="btn"
@@ -81,8 +55,8 @@
 
         <ImageButton
             android:id="@+id/clear"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/broom"
             android:onClick="btn"
@@ -90,34 +64,50 @@
 
         <ImageButton
             android:id="@+id/undo"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/arrow_u_left_top"
             android:onClick="btn" />
 
         <ImageButton
             android:id="@+id/redo"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/arrow_u_right_top"
             android:onClick="btn"
             tools:ignore="TouchTargetSizeCheck" />
         <ImageButton
             android:id="@+id/eraser"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/eraser"
             android:onClick="btn"
             tools:ignore="SpeakableTextPresentCheck" />
         <ImageButton
             android:id="@+id/magnet"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_margin="5dp"
             android:background="@drawable/magnet"
+            android:onClick="btn"
+            tools:ignore="SpeakableTextPresentCheck" />
+        <ImageButton
+            android:id="@+id/cursor"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/cursor_default_outline"
+            android:onClick="btn"
+            tools:ignore="SpeakableTextPresentCheck" />
+        <ImageButton
+            android:id="@+id/wrap"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/border_none_variant"
             android:onClick="btn"
             tools:ignore="SpeakableTextPresentCheck" />
 
