--- a/app/src/main/res/layout/draw_canvas.xml
+++ b/app/src/main/res/layout/draw_canvas.xml
@@ -6,115 +6,127 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DrawCanvas">
+    <HorizontalScrollView
+        android:id="@+id/toolBar"
+        android:background="@drawable/toolbar_background"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/Color"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/black_background"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/shape"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/minus_thick"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/background"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/checkbox_blank_outline"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/clear"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/broom"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/undo"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/arrow_u_left_top"
+                android:onClick="btn" />
+
+            <ImageButton
+                android:id="@+id/redo"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/arrow_u_right_top"
+                android:onClick="btn"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <ImageButton
+                android:id="@+id/eraser"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/eraser"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/magnet"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/magnet"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/cursor"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/cursor_default_outline"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/wrap"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/border_none_variant"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+            <ImageButton
+                android:id="@+id/image"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/folder_image"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <RelativeLayout
+        android:id="@+id/RL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/toolBar">
-
         <com.KDB.exam.canvasView
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/toolBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/toolbar_background"
-        android:gravity="center"
-        android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/Color"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/black_background"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <ImageButton
-            android:id="@+id/shape"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/minus_thick"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-        <ImageButton
-            android:id="@+id/background"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/checkbox_blank_outline"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck"
-            />
-
-        <ImageButton
-            android:id="@+id/clear"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/broom"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <ImageButton
-            android:id="@+id/undo"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/arrow_u_left_top"
-            android:onClick="btn" />
-
-        <ImageButton
-            android:id="@+id/redo"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/arrow_u_right_top"
-            android:onClick="btn"
-            tools:ignore="TouchTargetSizeCheck" />
-        <ImageButton
-            android:id="@+id/eraser"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/eraser"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-        <ImageButton
-            android:id="@+id/magnet"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/magnet"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-        <ImageButton
-            android:id="@+id/cursor"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/cursor_default_outline"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-        <ImageButton
-            android:id="@+id/wrap"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/border_none_variant"
-            android:onClick="btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-    </LinearLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
 </RelativeLayout>
