페이지 삭제 및 되돌리기 구현(미완) 텍스트 파트와 병합 진행중

--- a/app/src/main/res/layout/draw_canvas.xml
+++ b/app/src/main/res/layout/draw_canvas.xml
@@ -6,6 +6,108 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".DrawCanvas">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/testBar"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/boldBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="굵" />
+
+                <Button
+                    android:id="@+id/italicBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="기" />
+
+                <Button
+                    android:id="@+id/underlineBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="밑" />
+
+                <Button
+                    android:id="@+id/lineBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="취" />
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="40dp"
+                android:layout_height="40dp" />
+
+            <LinearLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/alignLeft"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="왼" />
+
+                <Button
+                    android:id="@+id/alignCenter"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="가" />
+
+                <Button
+                    android:id="@+id/alignRight"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="오" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <Spinner
+                android:id="@+id/colorSpin"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp" />
+
+            <Spinner
+                android:id="@+id/fontSpin"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp" />
+
+            <Spinner
+                android:id="@+id/sizeSpin"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp" />
+
+            <Spinner
+                android:id="@+id/bgSpin"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
+    </LinearLayout>
 
     <com.KDB.exam.CustomScrollView
         android:id="@+id/scrollView"
@@ -13,18 +115,22 @@
         android:layout_height="match_parent"
         android:background="@color/gray"
         android:layout_above="@+id/toolBar"
+        android:layout_below="@id/testBar"
         android:overScrollMode="ifContentScrolls"
         android:scrollbars="none"
         >
-        <com.KDB.exam.CanvasManager
-            android:id="@+id/LL"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             >
-
-        </com.KDB.exam.CanvasManager>
-
+            <com.KDB.exam.CanvasManager
+                android:id="@+id/LL"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+            </com.KDB.exam.CanvasManager>
+        </FrameLayout>
     </com.KDB.exam.CustomScrollView>
 
     <HorizontalScrollView
@@ -32,13 +138,21 @@
         android:background="@drawable/toolbar_background"
         android:gravity="center"
         android:layout_alignParentBottom="true"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
+            <ImageButton
+                android:id="@+id/mode"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/pen"
+                android:onClick="btn"
+                tools:ignore="SpeakableTextPresentCheck" />
             <ImageButton
                 android:id="@+id/Color"
                 android:layout_width="20dp"
