--- a/app/src/main/res/menu/backgroundcolor_menu.xml
+++ b/app/src/main/res/menu/backgroundcolor_menu.xml
@@ -5,25 +5,20 @@
     <item
         android:title="@string/backgroundRed"
         android:id="@+id/background_red"
-        android:icon="@drawable/red"
         />
     <item
         android:title="@string/backgroundGreen"
         android:id="@+id/background_green"
-        android:icon="@drawable/green"
         />
     <item
         android:title="@string/backgroundYellow"
-        android:id="@+id/background_yellow"
-        android:icon="@drawable/yellow"/>
+        android:id="@+id/background_yellow"/>
     <item
         android:title="@string/backgroundGray"
-        android:id="@+id/background_gray"
-        android:icon="@drawable/gray"/>
+        android:id="@+id/background_gray"/>
     <item
         android:title="@string/backgroundBlue"
-        android:id="@+id/background_blue"
-        android:icon="@drawable/blue"/>
+        android:id="@+id/background_blue"/>
 
     <item
         android:title="기본 색상"
